--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(calcex)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(calcex main.cpp detail/Tokenizer.h detail/Token.h detail/Tokenizer.cpp detail/Parser.cpp detail/Parser.h)
+add_executable(calcex main.cpp detail/Tokenizer.h detail/Token.h detail/Tokenizer.cpp detail/Parser.cpp detail/Parser.h detail/Calculator.cpp detail/Calculator.h)
