--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(calcex)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(calcex main.cpp detail/tokenizer/Token.h detail/Parser.cpp detail/Parser.h detail/Calculator.cpp detail/Calculator.h detail/tokenizer/Tokenizer.cpp detail/tokenizer/Tokenizer.h)
+add_executable(calcex main.cpp detail/tokenizer/Token.h detail/parser/Parser.cpp detail/parser/Parser.h detail/parser/Tree.h detail/Calculator.cpp detail/Calculator.h detail/tokenizer/Tokenizer.cpp detail/tokenizer/Tokenizer.h)
